--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Initial">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.example.r00143659.Juegos.MainActivity"
+            android:label="Seleccione que juego quiere">
         </activity>
         <activity android:name="com.example.r00143659.Juegos.Conecta4"
             android:label="Conecta 4">
         </activity>
         <activity android:name="com.example.r00143659.Juegos.ChaChaCha"
             android:label="Cha cha cha">
+        </activity>
+        <activity android:name="com.example.r00143659.Juegos.CCCPreference"
+            android:label="Preferencias">
         </activity>
         <activity android:name="com.example.r00143659.Juegos.About"
             android:theme="@android:style/Theme.Holo.Dialog"
